# silent

./: .clang-format  .clang-tidy  .clangd  .gitignore  .justfile  AGENT.md  CLAUDE.md  CMakeLists.txt  CODE_GUIDELINES.md  README.md  build.sh  flake.nix  i18n.md  result
.cdm/: ACTIONS.md  PLAN.md  ROADMAP.md  SCHEMA.md  STRUCTURE.md  TASKS.md  config.toml  roadmap.json  tasks.json
.cdm/agents/: ACTIONS.md  FIX.md  PLAN.md  PLANNER.md  STRUCTURE.md
.cdm/plans/: plan-1.task-1.md  plan-10.task-1.md  plan-11.task-1.md  plan-12.task-1.md  plan-13.task-1.md  plan-14.task-1.md  plan-15.task-1.md  plan-16.task-1.md  plan-17.task-1.md  plan-18.task-1.md  plan-19.task-1.md  plan-2.task-1.md  plan-20.task-1.md  plan-21.task-1.md  plan-22.task-1.md  plan-23.task-1.md  plan-24.task-1.md  plan-25.task-1.md  plan-26.task-1.md  plan-27.task-1.md  plan-3.task-1.md  plan-4.task-1.md  plan-5.task-1.md  plan-6.task-1.md  plan-7.task-1.md  plan-8.task-1.md  plan-9.task-1.md
.claude/commands/: cm.md  end.md  expand.md  feat.md  fix.md  run.md  split.md
.cm/: PLAN.md  ROADMAP.md  SCHEMA.md  TASKS.md  config.toml  roadmap.json  tasks.json
.cm/agents/: ACTIONS.md  IMPLEMENTER.md  PLAN.md  PLANNER.md  REVIEWER.md  STRUCTURE.md  TASK_PLAN_TEMPLATE.md
.cm/plans/: plan-1.md  plan-2.md  plan-3.md  plan-4.md  plan-5.md  plan-6.md  plan-7.md  plan-8.md  plan-9.md
.github/workflows/: ci.yml
contrib/: release.sh  sign.sh
docs/: I18N.md  MODULES.md  PLUGINS.md
i18n/: silent_de.lang  silent_en.lang  silent_es.lang  silent_fr.lang  silent_it.lang  silent_pt.lang
lib/include/: silent.h
scripts/: gen_host_exports.sh
scripts/i18n/: add_entry.py  add_lang.py  catalog.py  check_ids.py  check_pragma_log.py  generate_ts.py  sync_lang.py
scripts/lint/: clang_tidy_diff_commits.sh  rust_lint_commits.sh
silent/: Cargo.toml  build.rs
silent/src/: account.rs  app_state.rs  config.rs  lib.rs  sync_estimator.rs
silent/tests/: integration.rs  list_accounts.rs  multi_account.rs  validate_psbt.rs
silent/tests/common/: mod.rs
src/: AccountController.cpp  AccountController.h  AccountWidget.cpp  AccountWidget.h  AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h  QtAbiSurface.cpp  StatusBar.cpp  StatusBar.h  main.cpp  metatypes.h
src/host/: Host.cpp  Host.h  PluginRegistry.cpp  PluginRegistry.h
src/i18n/: I18nManager.cpp  I18nManager.h  Tr.h
src/interfaces/: CMakeLists.txt  account.h  feed.h  host.h  instance.h  module.h  signer.h  theme.h  tr.h
src/modules/sp/: AccountController.cpp  AccountController.h  AccountWidget.cpp  AccountWidget.h  SpAccount.cpp  SpAccount.h  SpInstance.cpp  SpInstance.h  SpModule.cpp  SpModule.h  SpPlugin.cpp  SpPlugin.h  StatusBar.cpp  StatusBar.h
src/modules/sp/modals/: CreateAccount.cpp
src/modules/sp/screens/: Coins.cpp  Coins.h  History.cpp  History.h  Receive.cpp  Send.cpp  Send.h  Settings.cpp  Settings.h
src/plugin/sdk/: CMakeLists.txt  tr.h  types.h
src/plugin/sdk/interfaces/: account.h  feed.h  instance.h  module.h  signer.h  theme.h
src/plugin/sdk/smoke/: main.cpp  mock.cpp
src/resources/: README.md  embed_font.sh  fetch_icons.sh
src/resources/font/: noto_sans.h
src/resources/icon/: a_arrow_down.h  a_arrow_up.h  a_large_small.h  accessibility.h  activity.h  air_vent.h  airplay.h  alarm_clock.h  alarm_clock_check.h  alarm_clock_minus.h  alarm_clock_off.h  alarm_clock_plus.h  alarm_smoke.h  album.h  align_center_horizontal.h  align_center_vertical.h  align_end_horizontal.h  align_end_vertical.h  align_horizontal_distribute_center.h  align_horizontal_distribute_end.h  align_horizontal_distribute_start.h  align_horizontal_justify_center.h  align_horizontal_justify_end.h  align_horizontal_justify_start.h  align_horizontal_space_around.h  align_horizontal_space_between.h  align_start_horizontal.h  align_start_vertical.h  align_vertical_distribute_center.h  align_vertical_distribute_end.h  align_vertical_distribute_start.h  align_vertical_justify_center.h  align_vertical_justify_end.h  align_vertical_justify_start.h  align_vertical_space_around.h  align_vertical_space_between.h  ambulance.h  ampersand.h  ampersands.h  amphora.h  (+1664 more)
src/screens/: Coins.cpp  Coins.h  History.cpp  History.h  MenuTab.cpp  MenuTab.h  Receive.cpp  Receive.h  Send.cpp  Send.h  Settings.cpp  Settings.h  common.cpp  utils.cpp  utils.h
src/screens/modals/: AppSettings.cpp  AppSettings.h  ConfirmDelete.cpp  ConfirmDelete.h  ConfirmSend.cpp  ConfirmSend.h  CreateAccount.cpp  CreateAccount.h  CustomLaunchers.cpp  CustomLaunchers.h  SelectCoins.cpp  SelectCoins.h
src/theme/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ComboBox.cpp  ComboBox.h  Display.cpp  Display.h  Icon.cpp  Icon.h  Input.cpp  Input.h  Label.cpp  Label.h  Palette.cpp  Palette.h  Tab.cpp  Tab.h  TextEdit.cpp  TextEdit.h  Theme.cpp  Theme.h  Toggle.cpp  Toggle.h
templar/: Cargo.toml  build.rs
templar/src/: account.rs  config.rs  lib.rs
templar/tests/: integration.rs  multi_account.rs
