[package]
name = "silent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]
doctest = false

[dependencies]
# When changing rev, also update flake.lock:
#   nix --extra-experimental-features 'nix-command flakes' flake update bwk
bwk-sp = { git = "https://github.com/pythcoiner/bwk.git", rev = "821dab7"}
bitcoin = "0.32"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
thiserror = "2.0"
getrandom = "0.2"

[build-dependencies]
cxx-build = "1.0"
