[package]
name = "silent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]
doctest = false

[dependencies]
# When changing rev, also update flake.lock:
#   nix --extra-experimental-features 'nix-command flakes' flake update bwk
bwk-sp = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4"}
bwk-sign = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4" }
bwk-tx = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4" }
bwk-p2p = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4" }
bwk-electrum = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4" }
bitcoin = "0.32"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
thiserror = "2.0"
getrandom = "0.2"
ureq = { git = "https://github.com/pythcoiner/ureq.git", branch = "gzip", default-features = false }

[dev-dependencies]
blindbitd = { git = "https://github.com/pythcoiner/blindbitd.git", features = ["electrum"] }
bwk-utils = { git = "https://github.com/pythcoiner/bwk.git", rev = "edd53f4", features = ["test"] }
temp-dir = "0.1"

[build-dependencies]
cxx-build = "1.0"

[patch.crates-io]
bitcoin = { git = "https://github.com/pythcoiner/rust-bitcoin.git", rev = "d7998651" }
corepc-types = { git = "https://github.com/pythcoiner/corepc.git", branch = "bip375" }
corepc-client = { git = "https://github.com/pythcoiner/corepc.git", branch = "bip375" }
corepc-node = { git = "https://github.com/pythcoiner/corepc.git", branch = "bip375" }
