[package]
name = "templar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
# Note: bwk-sp requires spdk dependencies (backend-blindbit-native-non-async) that are not available
# Placeholder implementation for now - will integrate bwk-sp when spdk dependencies are available
# bwk-sp = { git = "https://github.com/pythcoiner/bwk.git", package = "bwk-sp" }
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"

[build-dependencies]
cxx-build = "1.0"
