[package]
name = "templar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
bwk-sp = { path = "../../bwk/sp" }
bitcoin = "0.32"
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
thiserror = "2.0"

[build-dependencies]
cxx-build = "1.0"
